eks/ingress-mycompany.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mycompany
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: "HTTPS"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:iam::<AWS-AccountId>:server-certificate/mycompany"
spec:
  rules:
  - http:
      paths:
      - path: /decisioncenter
        pathType: Prefix
        backend:
          service:
            name: mycompany-odm-decisioncenter
            port:
              number: 9453
      - path: /res
        pathType: Prefix
        backend:
          service:
            name: mycompany-odm-decisionserverconsole
            port:
              number: 9443
      - path: /DecisionService
        pathType: Prefix
        backend:
          service:
            name: mycompany-odm-decisionserverruntime
            port:
              number: 9443
      - path: /DecisionRunner
        pathType: Prefix
        backend:
          service:
            name: mycompany-odm-decisionrunner
            port:
              number: 9443
